# lab_8

./: .coverage  Models.py  Routs.py  main.py  pyproject.toml  test.py
static/: swagger.json
