[tool.poetry]
name = "lab-8"
version = "0.1.0"
description = ""
authors = ["Alaska2222 <100542322+Alaska2222@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "lab_8"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
